Add translation for all conditions

--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -605,8 +605,15 @@
   "wallet.recovery.phrase.show.entry.dialog.button.labelClear": "Clear",
   "wallet.recovery.phrase.show.entry.dialog.button.labelConfirm": "Confirm",
   "wallet.recovery.phrase.show.entry.dialog.button.labelRemoveLast": "Remove last",
-  "wallet.registrationOver.subtitle": "Registration for fund {roundNumber} is over. Open the Catalyst app for more information",
-  "wallet.registrationOver.title": "Registration has ended",
+  "wallet.registrationOver.mainTitle": "Registration has ended",
+  "wallet.registrationOver.mainSubtitle": "Registration for fund {roundNumber} is over. Open the Catalyst app for more information",
+  "wallet.registrationOver.unavailableTitle": "Catalyst Round Info unavailable",
+  "wallet.registrationOver.unavailableSubtitle": "Please check the Catalyst app for more info",
+  "wallet.registrationOver.earlyForRegistrationTitle": "Registration hasn't started yet",
+  "wallet.registrationOver.earlyForRegistrationSubTitle": "Round {roundNumber} registration starts at {registrationStart}",
+  "wallet.registrationOver.beforeVotingSubtitle": "Registration has ended. Voting starts at {votingStart}",
+  "wallet.registrationOver.betweenVotingSubtitle": "Registration has ended.  Voting ends at  {votingEnd}",
+  "wallet.registrationOver.nextFundRegistration": "Round {roundNumber} starts at {registrationStart}",
   "wallet.restore.dialog.form.errors.invalidRecoveryPhrase": "Invalid recovery phrase",
   "wallet.restore.dialog.form.errors.shortRecoveryPhrase": "{number} words left",
   "wallet.restore.dialog.paperPasswordLabel": "Paper wallet password",
