Ergo wallet records and displays submitted transactions

--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -228,8 +228,8 @@
   "profile.termsOfUse.checkboxLabel": "I agree with the terms of use",
   "profile.termsOfUse.title": "Terms Of Use",
   "profile.uriAccept.seePrompt": "Simply <strong>click <em>Allow</em></strong> to enable payment URLs",
-  "profile.uriPrompt.form.heading": "Allow Cardano Payment URLs",
   "profile.uriPrompt.form.explanation": "Yoroi will allow you to generate special links in Receive page and share it in order to receive payment faster and easier. You can always enable this feature in the Settings.",
+  "profile.uriPrompt.form.heading": "Allow Cardano Payment URLs",
   "profile.uriPrompt.form.skipLabel": "Skip",
   "serverError.label.message": "WARNING: Server experiencing difficulties.<br>Please check <a target='blank' href='https://twitter.com/YoroiWallet'>our Twitter account</a>.<br>The displayed balance and transaction history may appear incorrect until our servers are back to normal, but your actual balance is not affected.",
   "settings.display.blog": "You can read our {blogLink} on how to use this feature.",
@@ -738,6 +738,7 @@
   "wallet.transaction.sent": "{currency} sent",
   "wallet.transaction.state.failed": "failed",
   "wallet.transaction.state.pending": "pending",
+  "wallet.transaction.state.submitted": "submitted",
   "wallet.transaction.success.button.label": "Transaction page",
   "wallet.transaction.success.explanation": "Track the status of the transaction from the Transactions page",
   "wallet.transaction.success.title": "Successfully sent",
