--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -228,8 +228,8 @@
   "profile.termsOfUse.checkboxLabel": "I agree with the terms of use",
   "profile.termsOfUse.title": "Terms Of Use",
   "profile.uriAccept.seePrompt": "Simply <strong>click <em>Allow</em></strong> to enable payment URLs",
-  "profile.uriPrompt.form.heading": "Allow Cardano Payment URLs",
   "profile.uriPrompt.form.explanation": "Yoroi will allow you to generate special links in Receive page and share it in order to receive payment faster and easier. You can always enable this feature in the Settings.",
+  "profile.uriPrompt.form.heading": "Allow Cardano Payment URLs",
   "profile.uriPrompt.form.skipLabel": "Skip",
   "serverError.label.message": "WARNING: Server experiencing difficulties.<br>Please check <a target='blank' href='https://twitter.com/YoroiWallet'>our Twitter account</a>.<br>The displayed balance and transaction history may appear incorrect until our servers are back to normal, but your actual balance is not affected.",
   "settings.display.blog": "You can read our {blogLink} on how to use this feature.",
@@ -324,8 +324,15 @@
   "settings.unitOfAccount.lastUpdated": "<strong>Last updated:</strong> {lastUpdated}",
   "settings.unitOfAccount.note": "<strong>Note:</strong> coin price is approximate and may not match the price of any given trading platform. Any transactions based on these price approximates are done at your own risk.",
   "settings.unitOfAccount.title": "Currency Conversion",
+  "sidebar.assets": "Assets",
+  "sidebar.faq": "Faq",
+  "sidebar.feedback": "Feedback",
+  "sidebar.newUpdates": "New updates",
   "sidebar.settings": "Settings",
+  "sidebar.staking": "Staking",
+  "sidebar.swap": "Swap",
   "sidebar.transfer": "Claim / Transfer",
+  "sidebar.voting": "Voting",
   "sidebar.wallets": "My wallets",
   "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK.",
   "transfer.form.instructions.step1.text": "It will take about 1 minute to restore your balance. In the next step, you will be presented with a transaction that will move all of your funds. Please review the details of the transaction carefully. You will need to pay a standard transaction fee on the Cardano network to make the transaction.",
@@ -653,10 +660,10 @@
   "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} {ticker}.",
   "wallet.send.form.receiver.hint": "Wallet Address",
   "wallet.send.form.receiver.label": "Receiver",
+  "wallet.send.form.sendAll.allTokens": " + all tokens",
+  "wallet.send.form.sendAll.customAmount": "Custom Amount",
   "wallet.send.form.sendAll.dropdownAmountLabel": "Send all {currency}",
   "wallet.send.form.sendAll.selectedAmountLable": "Amount Options",
-  "wallet.send.form.sendAll.customAmount": "Custom Amount",
-  "wallet.send.form.sendAll.allTokens": " + all tokens",
   "wallet.send.form.sendingIsDisabled": "Cannot send a new transaction while an existing one is still pending.",
   "wallet.send.form.transactionFeeError": "Not enough Ada for fees. Try sending a smaller amount.",
   "wallet.send.ledger.confirmationDialog.info.line.1": "After connecting your Ledger device to your computer's USB port, press the Send using Ledger button.",
