--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -560,6 +560,7 @@
   "wallet.navigation.delegationList": "Delegation List",
   "wallet.navigation.receive": "Receive",
   "wallet.navigation.send": "Send",
+  "wallet.navigation.assets": "Assets",
   "wallet.navigation.transactions": "Transactions",
   "wallet.navigation.voting": "Voting",
   "wallet.nowallet.subtitle": "Please choose a wallet from the top-right dropdown",
