--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -675,6 +675,11 @@
   "wallet.send.trezor.confirmationDialog.info.line.2": "A new tab will appear. Please follow the instructions in the new tab.",
   "wallet.send.trezor.confirmationDialog.submit": "Send using Trezor",
   "wallet.send.trezor.error.101": "Signing cancelled on Trezor device. Please retry",
+  "wallet.assets.search": "Search",
+  "wallet.assets.nameAndTicker": "Name and ticker",
+  "wallet.assets.quantity": "Quantity",
+  "wallet.assets.subject": "Subject",
+  "wallet.assets.tokens": "Tokens ({number})",
   "wallet.settings.changePassword.dialog.currentPasswordFieldPlaceholder": "Type current spending password",
   "wallet.settings.changePassword.dialog.currentPasswordLabel": "Current spending password",
   "wallet.settings.changePassword.dialog.newPasswordFieldPlaceholder": "Type new spending password",
