Updated serialisation-lib version and added displaying tx-size when it's close to the limits

--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -649,6 +649,7 @@
   "wallet.send.confirmationDialog.submit": "Send",
   "wallet.send.confirmationDialog.title": "Confirm transaction",
   "wallet.send.confirmationDialog.totalLabel": "Total",
+  "wallet.send.confirmationDialog.txSizeLabel": "Size (bytes)",
   "wallet.send.confirmationDialog.walletPasswordFieldPlaceholder": "Type your spending password",
   "wallet.send.confirmationDialog.walletPasswordLabel": "Spending password",
   "wallet.send.form.calculatingFee": "Calculating fee...",
