--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -680,7 +680,7 @@
   "wallet.assets.nameAndTicker": "Name and ticker",
   "wallet.assets.quantity": "Quantity",
   "wallet.assets.subject": "Subject",
-  "wallet.assets.tokens": "Tokens ({number})",
+  "wallet.assets.assets": "Assets ({number})",
   "wallet.assets.noAssetFound": "No Asset Found",
   "wallet.settings.changePassword.dialog.currentPasswordFieldPlaceholder": "Type current spending password",
   "wallet.settings.changePassword.dialog.currentPasswordLabel": "Current spending password",
