--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -679,7 +679,7 @@
   "wallet.assets.search": "Search",
   "wallet.assets.nameAndTicker": "Name and ticker",
   "wallet.assets.quantity": "Quantity",
-  "wallet.assets.subject": "Subject",
+  "wallet.assets.id": "ID",
   "wallet.assets.assets": "Assets ({number})",
   "wallet.assets.noAssetFound": "No Asset Found",
   "wallet.settings.changePassword.dialog.currentPasswordFieldPlaceholder": "Type current spending password",
