"Shelley-era wallet" => "Standard wallet" (in restoring only for now)

--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -387,8 +387,8 @@
   "wallet.add.optionDialog.walletEra.byronEra.description": "Wallets created before July 29th, 2020 are Byron-era wallets and cannot delegate.",
   "wallet.add.optionDialog.walletEra.byronEra.title": "Byron-era (read-only) wallet",
   "wallet.add.optionDialog.walletEra.dialogTitle": "Choose era",
-  "wallet.add.optionDialog.walletEra.shelleyEra.description": "Shelley-era wallets support delegation to stake pools.",
-  "wallet.add.optionDialog.walletEra.shelleyEra.title": "Shelley-era wallet",
+  "wallet.add.optionDialog.walletEra.standard.description": "Standard modern wallets support delegation to stake pools.",
+  "wallet.add.optionDialog.walletEra.standard.title": "Standard wallet",
   "wallet.add.page.create.title": "Create wallet",
   "wallet.add.page.create.tooltip": "Generate a new 15-word recovery phrase<br/>and create a Yoroi wallet.",
   "wallet.add.page.daedalusTransfer.title": "Transfer funds from a Daedalus wallet to Yoroi",
