Changed message IDs for "Buy/Sell" => "Sell" to force translation updates

--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -50,11 +50,11 @@
   "app.errors.unableToLoad": "Unable to load!",
   "app.errors.unexpectedError": "Something unexpected happened. Please retry.",
   "app.errors.unknowError": "Unknown error.",
-  "button.buySellAda": "Buy ADA",
+  "button.buyAda": "Buy ADA",
   "buysell.dialog.instructions": "Please select your preferences. On the next screen, confirm your selection by pressing the green arrow on the top right",
   "buysell.dialog.manual": "I will add my address manually",
   "buysell.dialog.selectAddress": "Please select the receiving address. This will be shared with the third party provider called Changelly for the buy / sell of ADA. ",
-  "buysell.dialog.title": "Buy ADA",
+  "buy.dialog.title": "Buy ADA",
   "connector.connect.connectedWallets": "Connected Wallets",
   "connector.connect.noWebsitesConnected": "You don't have any websites connected yet",
   "connector.settings.about": "About",
