--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -760,6 +760,7 @@
   "wallet.transaction.export.dialog.exportButton.label": "Export",
   "wallet.transaction.export.dialog.infoText1": "The entire transaction history within your wallet will be exported to a file.",
   "wallet.transaction.export.dialog.title": "Export transactions to file",
+  "wallet.transaction.export.dialog.includeTxIds" : "Include Transaction IDs",
   "wallet.transaction.export.exportIcon.tooltip": "Export to file",
   "wallet.transaction.fee": "Fee",
   "wallet.transaction.memo.add.dialog.actions.submit": "Add",
