--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -234,6 +234,7 @@
   "profile.uriPrompt.form.heading": "Allow Cardano Payment URLs",
   "profile.uriPrompt.form.skipLabel": "Skip",
   "serverError.label.message": "WARNING: Server experiencing difficulties.<br>Please check <a target='blank' href='https://twitter.com/YoroiWallet'>our Twitter account</a>.<br>The displayed balance and transaction history may appear incorrect until our servers are back to normal, but your actual balance is not affected.",
+  "settings.backYoroiClassic": "!!!Back to Yoroi Classic",
   "settings.display.blog": "You can read our {blogLink} on how to use this feature.",
   "settings.display.themeExportButton": "EXPORT THEME",
   "settings.display.themeLabel": "Theme",
@@ -316,6 +317,7 @@
   "settings.support.reportProblem.content": "If the FAQ does not solve the issue you are experiencing, please use our {supportRequestLink} feature.",
   "settings.support.reportProblem.link": "Support request",
   "settings.support.reportProblem.title": "Reporting a problem",
+  "settings.tryYoroiRevamp": "!!!Try new Yoroi Revamp",
   "settings.unitOfAccount.currency.btc": "Bitcoin",
   "settings.unitOfAccount.currency.cny": "Chinese Renminbi yuan",
   "settings.unitOfAccount.currency.eth": "Ethereum",
