fix intl messages

--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -234,7 +234,7 @@
   "profile.uriPrompt.form.heading": "Allow Cardano Payment URLs",
   "profile.uriPrompt.form.skipLabel": "Skip",
   "serverError.label.message": "WARNING: Server experiencing difficulties.<br>Please check <a target='blank' href='https://twitter.com/YoroiWallet'>our Twitter account</a>.<br>The displayed balance and transaction history may appear incorrect until our servers are back to normal, but your actual balance is not affected.",
-  "settings.backYoroiClassic": "!!!Back to Yoroi Classic",
+  "settings.backYoroiClassic": "Back to Yoroi Classic",
   "settings.display.blog": "You can read our {blogLink} on how to use this feature.",
   "settings.display.themeExportButton": "EXPORT THEME",
   "settings.display.themeLabel": "Theme",
@@ -317,7 +317,7 @@
   "settings.support.reportProblem.content": "If the FAQ does not solve the issue you are experiencing, please use our {supportRequestLink} feature.",
   "settings.support.reportProblem.link": "Support request",
   "settings.support.reportProblem.title": "Reporting a problem",
-  "settings.tryYoroiRevamp": "!!!Try new Yoroi Revamp",
+  "settings.tryYoroiRevamp": "Try new Yoroi Revamp",
   "settings.unitOfAccount.currency.btc": "Bitcoin",
   "settings.unitOfAccount.currency.cny": "Chinese Renminbi yuan",
   "settings.unitOfAccount.currency.eth": "Ethereum",
@@ -567,6 +567,7 @@
   "wallet.insufficientFunds.subtitle": "Participating requires at least {requiredBalance} {tokenName}, but you only have {currentBalance}. Unwithdrawn rewards are not included in this amount",
   "wallet.insufficientFunds.title": "Insufficient funds",
   "wallet.nav.addButton": "Add new wallet",
+  "wallet.nav.addWallet": "Add Wallet",
   "wallet.nav.allWalletsLabel": "All wallets",
   "wallet.nav.backButton": "Back to my wallets",
   "wallet.nav.noWalletsAccessList.goToWallets": "Go to all my wallets and star those you use most often",
@@ -760,8 +761,8 @@
   "wallet.transaction.certificatesLabel": "Certificates",
   "wallet.transaction.confirmations": "confirmations",
   "wallet.transaction.conversion.rate": "Conversion rate",
-  "wallet.transaction.empty": "!!!Your wallet is empty",
-  "wallet.transaction.emptySubtitle": "!!!Top up your wallet safely using our trusted partners",
+  "wallet.transaction.empty": "Your wallet is empty",
+  "wallet.transaction.emptySubtitle": "Top up your wallet safely using our trusted partners",
   "wallet.transaction.export.dialog.exportButton.label": "Export",
   "wallet.transaction.export.dialog.infoText1": "The entire transaction history within your wallet will be exported to a file.",
   "wallet.transaction.export.dialog.title": "Export transactions to file",
