yoroi-extension: add Polish language files
Add files related to Polish language and add it to the list
of languages in translation.

Signed-off-by: Mateusz Albecki <mateusz.albecki@outlook.com>

--- a/packages/yoroi-extension/app/i18n/locales/de-DE.json
+++ b/packages/yoroi-extension/app/i18n/locales/de-DE.json
@@ -151,6 +151,7 @@
   "global.language.russian": "Pусский",
   "global.language.spanish": "Español",
   "global.language.turkish": "Turkish",
+  "global.language.polish": "Polski",
   "global.passwordInstructionsPaperWallet": "Achtung: Das Paper Wallet-Passwort muss mindestens <strong>10 Zeichen</strong> lang sein.",
   "global.publicKey.explanation": "Öffentliche Schlüssel erlauben es, die Wallet-Historie für die Wallet zu sehen, erlauben aber <strong>nicht</strong>, die Gelder in irgendeiner Weise auszugeben oder zu bewegen (der private Schlüssel ist <strong>nicht</strong> enthalten)",
   "global.selectAsset.labael": "Asset auswählen",
