--- a/packages/yoroi-extension/app/i18n/locales/ja-JP.json
+++ b/packages/yoroi-extension/app/i18n/locales/ja-JP.json
@@ -151,6 +151,7 @@
   "global.language.russian": "Pусский",
   "global.language.spanish": "Español",
   "global.language.turkish": "Turkish",
+  "global.language.polish": "Polski",
   "global.passwordInstructionsPaperWallet": "※ペーパーウォレットパスワードは<strong>10文字以上</strong>にしてください。",
   "global.publicKey.explanation": "Public keys allow seeing the wallet history for the wallet, but does <strong>not</strong> allow to spend or move the funds in any way (private key is <strong>not</strong> included)",
   "global.selectAsset.labael": "Select asset",
