--- a/packages/yoroi-extension/app/i18n/locales/ko-KR.json
+++ b/packages/yoroi-extension/app/i18n/locales/ko-KR.json
@@ -151,6 +151,7 @@
   "global.language.russian": "Pусский",
   "global.language.spanish": "Español",
   "global.language.turkish": "Turkish",
+  "global.language.polish": "Polski",
   "global.passwordInstructionsPaperWallet": "참고: 종이 지갑 암호는 적어도 <strong>10 글자 이상</strong> 이어야 합니다.",
   "global.publicKey.explanation": "Public keys allow seeing the wallet history for the wallet, but does <strong>not</strong> allow to spend or move the funds in any way (private key is <strong>not</strong> included)",
   "global.selectAsset.labael": "Select asset",
