--- a/packages/yoroi-extension/app/i18n/locales/pt-BR.json
+++ b/packages/yoroi-extension/app/i18n/locales/pt-BR.json
@@ -151,6 +151,7 @@
   "global.language.russian": "Pусский",
   "global.language.spanish": "Español",
   "global.language.turkish": "Turco",
+  "global.language.polish": "Polski",
   "global.passwordInstructionsPaperWallet": "Nota: a senha da Carteira de papel precisa ter pelo menos <strong> 10 caracteres </strong>.",
   "global.publicKey.explanation": "Public keys allow seeing the wallet history for the wallet, but does <strong>not</strong> allow to spend or move the funds in any way (private key is <strong>not</strong> included)",
   "global.selectAsset.labael": "Select asset",
