--- a/packages/yoroi-extension/app/i18n/locales/pt-PT.json
+++ b/packages/yoroi-extension/app/i18n/locales/pt-PT.json
@@ -100,6 +100,7 @@
   "global.language.korean": "한국어",
   "global.language.russian": "Pусский",
   "global.language.spanish": "Español",
+  "global.language.polish": "Polski",
   "global.passwordInstructionsPaperWallet": "Note: Paper Wallet password needs to be at least <strong>12 characters</strong> long.",
   "global.staleTxnWarningLine1": "Your wallet has changed since you created this transaction.",
   "global.staleTxnWarningLine2": "You can still send this transaction but it may fail.",
