--- a/packages/yoroi-extension/app/i18n/locales/tr-TR.json
+++ b/packages/yoroi-extension/app/i18n/locales/tr-TR.json
@@ -151,6 +151,7 @@
   "global.language.russian": "Pусский",
   "global.language.spanish": "Español",
   "global.language.turkish": "Türkçe",
+  "global.language.polish": "Polski",
   "global.passwordInstructionsPaperWallet": "Not: Kağıt Cüzdan şifreniz en az <strong>10 karakter</strong> uzunluğunda olması gerekir.",
   "global.publicKey.explanation": "Public keys allow seeing the wallet history for the wallet, but does <strong>not</strong> allow to spend or move the funds in any way (private key is <strong>not</strong> included)",
   "global.selectAsset.labael": "Varlık seç",
