--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -578,6 +578,7 @@
   "wallet.nav.type.standard": "Standard wallet",
   "wallet.nav.type.trezor": "Trezor wallet",
   "wallet.navigation.assets": "Assets",
+  "wallet.navigation.claimTransferADA": "Claim/Transfer ADA",
   "wallet.navigation.delegationById": "Delegation by Id",
   "wallet.navigation.delegationDashboard": "Dashboard",
   "wallet.navigation.delegationList": "Delegation List",
@@ -722,6 +723,7 @@
   "wallet.settings.resync.label": "Resync wallet with the blockchain",
   "wallet.settings.resync.warning": "This will also cause failed transactions to disappear as they are not stored on the blockchain.",
   "wallet.settings.unchangedPassword": "Password unchanged since wallet creation",
+  "wallet.staking.banner.delegateNow": "Delegate now with our stake pool and start earning rewards",
   "wallet.staking.pool.unknownLabel": "Unknown pool",
   "wallet.staking.warning.pendingTx": "You cannot change your delegation preference while a transaction is pending",
   "wallet.summary.no.transaction": "No transactions found",
