--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -57,6 +57,9 @@
   "buy.dialog.title": "Buy ADA",
   "connector.connect.connectedWallets": "Connected Wallets",
   "connector.connect.noWebsitesConnected": "You don't have any websites connected yet",
+  "connector.signin.title": "Sign transaction",
+  "connector.signin.transactionId": "Transaction id",
+  "connector.signin.utxoDetails": "Utxo Details",
   "connector.settings.about": "About",
   "connector.settings.about.dAppDescription": "The dApp connector allows dApps (decentralized applications) in the form of web pages to interact in a secure manner with the user's Yoroi Ergo wallets to enable smart contract functionality.",
   "connector.settings.about.dAppInfo": "What is the dApp connector?",
