Change name convention from utxo to transaction details

--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -58,7 +58,9 @@
   "connector.connect.connectedWallets": "Connected Wallets",
   "connector.connect.noWebsitesConnected": "You don't have any websites connected yet",
   "connector.signin.title": "Sign transaction",
-  "connector.signin.utxoDetails": "Utxo Details",
+  "connector.signin.txDetails": "Transaction Details",
+  "connector.signin.receiver": "Receiver",
+  "connector.signin.more": "more",
   "connector.settings.about": "About",
   "connector.settings.about.dAppDescription": "The dApp connector allows dApps (decentralized applications) in the form of web pages to interact in a secure manner with the user's Yoroi Ergo wallets to enable smart contract functionality.",
   "connector.settings.about.dAppInfo": "What is the dApp connector?",
