--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -335,6 +335,7 @@
   "sidebar.newUpdates": "New updates",
   "sidebar.settings": "Settings",
   "sidebar.staking": "Staking",
+  "sidebar.stakingDashboard": "Staking Dashboard",
   "sidebar.swap": "Swap",
   "sidebar.transfer": "Claim / Transfer",
   "sidebar.voting": "Voting",
@@ -724,6 +725,8 @@
   "wallet.settings.resync.warning": "This will also cause failed transactions to disappear as they are not stored on the blockchain.",
   "wallet.settings.unchangedPassword": "Password unchanged since wallet creation",
   "wallet.staking.banner.delegateNow": "Delegate now with our stake pool and start earning rewards",
+  "wallet.staking.banner.firstRewardHelperMessage": "1 epoch = 5 days. This means you will receive the first reward after 15-20 days from the delegation moment. All next rewards you will receive rewards every epoch (5 days).",
+  "wallet.staking.banner.roaHelperMessage": "Estimated ROA (Return of ADA) based on staking result from the last 30 days",
   "wallet.staking.pool.unknownLabel": "Unknown pool",
   "wallet.staking.warning.pendingTx": "You cannot change your delegation preference while a transaction is pending",
   "wallet.summary.no.transaction": "No transactions found",
