fix: i18n details page

--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -20,7 +20,7 @@
   "api.errors.getAllUTXOsForAddressesError": "Error received from api method call while getting UTxOs.",
   "api.errors.getBalanceError": "Error while getting balance.",
   "api.errors.getBestBlockApiError": "Error received from server while getting best block.",
-  "api.errors.getCatalystRoundApiError": "!!!Error received from server while getting catalyst round info.",
+  "api.errors.getCatalystRoundApiError": "Error received from server while getting catalyst round info.",
   "api.errors.getPoolInfoApiError": "Error received from server while getting pool info.",
   "api.errors.getReputationError": "Error received from server while getting reputation.",
   "api.errors.getRewardHistoryApiError": "Error received from server while getting reward history.",
@@ -418,11 +418,18 @@
   "wallet.address.category.single": "Addresses containing only a spending key and no staking key",
   "wallet.amountInput.feesLabel": "+ {amount} of fees",
   "wallet.assets.assets": "Assets ({number})",
+  "wallet.assets.created": "Created",
+  "wallet.assets.details": "Details",
+  "wallet.assets.detailsOn": "Details on",
   "wallet.assets.id": "ID",
+  "wallet.assets.identifier": "Identifier",
   "wallet.assets.nameAndTicker": "Name and ticker",
   "wallet.assets.noAssetFound": "No Asset Found",
+  "wallet.assets.policyId": "Policy ID",
   "wallet.assets.quantity": "Quantity",
   "wallet.assets.search": "Search",
+  "wallet.assets.ticker": "Ticker",
+  "wallet.assets.tokens": "Tokens",
   "wallet.backup.dialog.legacy.checkConfirm": "Do you want to check if your wallet needs to be upgraded?",
   "wallet.backup.dialog.legacy.explanation": "If you had any ADA in your wallet on November 29th, 2019\n    you have to upgrade your wallet to a Shelley \"reward wallet\".",
   "wallet.backup.dialog.legacy.upgrade": "Wallet Upgrade",
