fixes and improvements

--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -421,6 +421,7 @@
   "wallet.assets.created": "Created",
   "wallet.assets.details": "Details",
   "wallet.assets.detailsOn": "Details on",
+  "wallet.assets.fingerprint": "Fingerprint",
   "wallet.assets.id": "ID",
   "wallet.assets.identifier": "Identifier",
   "wallet.assets.nameAndTicker": "Name and ticker",
@@ -862,6 +863,7 @@
   "wallet.voting.trezorTRequirement": "<a target=\"_blank\" rel=\"noopener noreferrer\" href=\"https://wiki.trezor.io/User_manual:Updating_the_Trezor_device_firmware\">Update</a> your Trezor Model T firmware version to 2.4.1 or above.",
   "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} {ticker} from your deposit",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copy to clipboard",
+  "widgets.copyableaddress.copied": "Copied",
   "widgets.explorer.tooltip": "Go to {websiteName}",
   "widgets.warningBox.headerText": "ATTENTION:",
   "yoroiTransfer.error.noTransferTxError": "There is no transfer transaction to send.",
