Update en-US.json file

--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -714,7 +714,7 @@
   "wallet.send.form.transactionFeeError": "Not enough Ada for fees. Try sending a smaller amount.",
   "wallet.send.form.willSendAll": "Will Send All Tokens!",
   "wallet.send.form.revamp.amountMinAdaIncluded": "Amount (includes min-ADA)",
-  "wallet.send.form.revamp.transactionFee": "Transaction fee",
+  "wallet.send.preview.transactionFee": "Transaction fee",
   "wallet.send.form.revamp.nAssets": "{number} assets",
   "wallet.send.ledger.confirmationDialog.info.line.1": "After connecting your Ledger device to your computer's USB port, press the Send using Ledger button.",
   "wallet.send.ledger.confirmationDialog.info.line.2": "Make sure the Cardano ADA app remains open on the Ledger device throughout the process.",
