--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -141,6 +141,7 @@
   "global.labels.note": "Note:",
   "global.labels.optionalMemo": "Memo (optional)",
   "wallet.send.form.memoWarning": "Memos are stored localy only",
+  "wallet.send.form.max": "MAX",
   "global.labels.processing": "Processing...",
   "global.labels.remove": "Remove",
   "global.labels.rewardsLabel": "Rewards",
@@ -715,7 +716,8 @@
   "wallet.send.form.willSendAll": "Will Send All Tokens!",
   "wallet.send.form.revamp.amountMinAdaIncluded": "Amount (includes min-ADA)",
   "wallet.send.preview.transactionFee": "Transaction fee",
-  "wallet.send.form.revamp.nAssets": "{number} assets",
+  "wallet.send.form.nAssets": "{number} assets",
+  "wallet.send.form.preview.nAssets": "{number} Assets",
   "wallet.send.ledger.confirmationDialog.info.line.1": "After connecting your Ledger device to your computer's USB port, press the Send using Ledger button.",
   "wallet.send.ledger.confirmationDialog.info.line.2": "Make sure the Cardano ADA app remains open on the Ledger device throughout the process.",
   "wallet.send.ledger.confirmationDialog.submit": "Send using Ledger",
