add missing i18n messages

--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -152,6 +152,7 @@
   "global.labels.upgrade": "Upgrade",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
+  "global.language.czech": "Czech",
   "global.language.dutch": "Nederlands",
   "global.language.english": "English",
   "global.language.french": "Français",
@@ -162,6 +163,7 @@
   "global.language.korean": "한국어",
   "global.language.portuguese": "Português",
   "global.language.russian": "Pусский",
+  "global.language.slovak": "Slovak",
   "global.language.spanish": "Español",
   "global.language.turkish": "Turkish",
   "global.passwordInstructionsPaperWallet": "Note: Paper Wallet password needs to be at least <strong>10 characters</strong> long.",
