--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -711,6 +711,7 @@
   "wallet.send.form.sendAll.customAmount": "Custom Amount",
   "wallet.send.form.sendAll.dropdownAmountLabel": "Send all {currency}",
   "wallet.send.form.sendAll.selectedAmountLable": "Amount Options",
+  "wallet.send.form.dialog": "min-ada",
   "wallet.send.form.sendingIsDisabled": "Cannot send a new transaction while an existing one is still pending.",
   "wallet.send.form.transactionFeeError": "Not enough Ada for fees. Try sending a smaller amount.",
   "wallet.send.form.willSendAll": "Will Send All Tokens!",
