--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -723,6 +723,8 @@
   "wallet.send.form.token": "Token",
   "wallet.send.form.nTokens": "Tokens ({number})",
   "wallet.send.form.nft": "NFT",
+  "wallet.send.form.nNFT": "NFT ({number})",
+  "wallet.send.form.nfts": "NFTs",
   "wallet.send.form.preview.nAssets": "{number} Assets",
   "wallet.send.ledger.confirmationDialog.info.line.1": "After connecting your Ledger device to your computer's USB port, press the Send using Ledger button.",
   "wallet.send.ledger.confirmationDialog.info.line.2": "Make sure the Cardano ADA app remains open on the Ledger device throughout the process.",
