--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -208,6 +208,8 @@
   "noticeBoard.notice.stakeUndelegated.subMessage": "Rewards for next two epochs will still be received",
   "noticeBoard.notice.stakeUndelegated.title": "You have undelegated from the pool [{poolTicker}]",
   "noticeBoard.topbar.title": "Notification",
+  "connectedWebsites.navbar.switcher.on": "Dapp Connector is on",
+  "connectedWebsites.navbar.switcher.off": "Dapp Connector is off",
   "notprod.label.message": "WARNING: non-production build. If unexpected, double-check Yoroi installation.",
   "profile.complexityLevel.advanced": "Advanced",
   "profile.complexityLevel.advanced.description": "I have some understanding of blockchain and how cryptography is used to power both the blockchain itself and the wallet software. I am okay with seeing options and functionality that critically depend on my understanding of these concepts.",
