--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -56,13 +56,10 @@
   "buysell.dialog.instructions": "Please select your preferences. On the next screen, confirm your selection by pressing the green arrow on the top right",
   "buysell.dialog.manual": "I will add my address manually",
   "buysell.dialog.selectAddress": "Please select the receiving address. This will be shared with the third party provider called Changelly for the buy / sell of ADA. ",
+  "connector.appName": "Dapp Connector",
   "connector.connect.connectedWallets": "Connected Wallets",
   "connector.connect.connectedWallets.active": "Active",
   "connector.connect.noWebsitesConnected": "You don't have any websites connected yet",
-  "connector.signin.title": "Sign transaction",
-  "connector.signin.txDetails": "Transaction Details",
-  "connector.signin.receiver": "Receiver",
-  "connector.signin.more": "more",
   "connector.settings.about": "About",
   "connector.settings.about.dAppDescription": "The dApp connector allows dApps (decentralized applications) in the form of web pages to interact in a secure manner with the user's Yoroi Ergo wallets to enable smart contract functionality.",
   "connector.settings.about.dAppInfo": "What is the dApp connector?",
@@ -70,6 +67,10 @@
   "connector.settings.about.howItWorksDescription": "The connector exposes a javascript interface to web pages you visit, specified by the Ergo EIP-0012 standard, allowing dApps to request read-only access to a user's Yoroi Ergo wallet. If the user gives access to a dApp, the dApp can read, but not change, the user's balance and addresses. The dApp can also request that the user sign a transaction, such as a smart contract created using the address information supplied via this connector. Private keys/passwords are never exposed to dApps, and all transaction signing is done within Yoroi and only with explicit user confirmation.",
   "connector.settings.supportContact": "Yoroi team will get back to you soon.",
   "connector.settings.supportText": "Feel free to contact us, if you need some help or you have some other question.",
+  "connector.signin.more": "more",
+  "connector.signin.receiver": "Receiver",
+  "connector.signin.title": "Sign transaction",
+  "connector.signin.txDetails": "Transaction Details",
   "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "There is no transaction to be sent.",
   "daedalusTransfer.error.transferFundsError": "Unable to transfer funds.",
@@ -336,7 +337,6 @@
   "settings.unitOfAccount.note": "<strong>Note:</strong> coin price is approximate and may not match the price of any given trading platform. Any transactions based on these price approximates are done at your own risk.",
   "settings.unitOfAccount.title": "Currency Conversion",
   "sidebar.assets": "Assets",
-  "sidebar.connectedWebsites": "Connected websites",
   "sidebar.faq": "Faq",
   "sidebar.feedback": "Feedback",
   "sidebar.newUpdates": "New updates",
@@ -685,9 +685,9 @@
   "wallet.restore.dialog.verify.wallet.button.label": "Verify wallet",
   "wallet.restore.dialog.wallet.name.input.hint": "e.g: Shopping Wallet",
   "wallet.restore.dialog.wallet.name.input.label": "Wallet name",
-  "wallet.restore.dialog.walletExist.title": "Wallet Already Exist",
-  "wallet.restore.dialog.walletExist.openWallet": "Open Wallet",
   "wallet.restore.dialog.walletExist.explanation": "You are trying to restore existing wallet.",
+  "wallet.restore.dialog.walletExist.openWallet": "Open Wallet",
+  "wallet.restore.dialog.walletExist.title": "Wallet Already Exist",
   "wallet.send.confirmationDialog.addressToLabel": "To",
   "wallet.send.confirmationDialog.amountLabel": "Amount",
   "wallet.send.confirmationDialog.feesLabel": "Fees",
@@ -755,9 +755,12 @@
   "wallet.staking.banner.roaHelperMessage": "Estimated ROA (Return of ADA) based on staking result from the last 30 days",
   "wallet.staking.banner.socialMedia": "Stake pool social media",
   "wallet.staking.dialogSummaryDescription": "Your rewards are automatically staked. You don’t need to withdraw it everytime because you pay a transaction fee.",
+  "wallet.staking.epochProgress": "Epoch Progress",
   "wallet.staking.overview": "Overview",
   "wallet.staking.overviewContent": "Your rewards are automatically staked. You don’t need to withdraw it everytime because you pay a transaction fee.",
   "wallet.staking.pool.unknownLabel": "Unknown pool",
+  "wallet.staking.rewards.openRewardHistory": "Open Reward History",
+  "wallet.staking.rewards.rewardHistory": "Reward History",
   "wallet.staking.summary": "Summary",
   "wallet.staking.warning.pendingTx": "You cannot change your delegation preference while a transaction is pending",
   "wallet.summary.no.transaction": "No transactions found",
@@ -773,6 +776,9 @@
   "wallet.summary.page.walletCreatedNotificationMessage": "You have successfully created a new Wallet",
   "wallet.summary.page.walletRestoredNotificationMessage": "You have successfully restored your Wallet",
   "wallet.summary.page.yesterdayLabel": "Yesterday",
+  "wallet.syncingOverlay.explanation": "We are processing your wallet data. This may take time. Please wait...",
+  "wallet.syncingOverlay.return": "Return to my wallets",
+  "wallet.syncingOverlay.title": "Wallet Syncing",
   "wallet.topbar.dialog.tokenTypes": "Token types",
   "wallet.topbar.dialog.totalBalance": "Total Balance",
   "wallet.transaction.address.from": "From address",
@@ -876,9 +882,6 @@
   "wallet.voting.notDelegated": "You have not delegated. Your voting power is how much you delegate and the voting rewards will be distributed to your delegation reward address. Please make sure to delegate before voting.",
   "wallet.voting.trezorTRequirement": "<a target=\"_blank\" rel=\"noopener noreferrer\" href=\"https://wiki.trezor.io/User_manual:Updating_the_Trezor_device_firmware\">Update</a> your Trezor Model T firmware version to 2.4.1 or above.",
   "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} {ticker} from your deposit",
-  "wallet.syncingOverlay.title": "Wallet Syncing",
-  "wallet.syncingOverlay.explanation": "We are processing your wallet data. This may take time. Please wait...",
-  "wallet.syncingOverlay.return": "Return to my wallets",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copy to clipboard",
   "widgets.copyableaddress.copied": "Copied",
   "widgets.explorer.tooltip": "Go to {websiteName}",
