--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -93,6 +93,13 @@
   "ergo-connector.label.connect": "Connect to",
   "ergo-connector.label.selectAllWallets": "Select all wallets",
   "connector.connectedWebsites.permissions.header": "Enable Yoroi to access dApps",
+  "connector.connectedWebsites.permissions.firstBlockHeader": "Why do you need dApp connector?",
+  "connector.connectedWebsites.permissions.firstBlockText": "DApp connector will allow the interaction between your Yoroi wallets and any Cardano dApps. You will be able to participate in any activities that the dApp permits such as purchasing or selling tokens, gaining access to resources, or using other features offered by the dApp.",
+  "connector.connectedWebsites.permissions.secondBlockHeader": "How does it work?",
+  "connector.connectedWebsites.permissions.secondBlockTextPt1": "Follow the link to see",
+  "connector.connectedWebsites.permissions.secondBlockTextPt2": "and guide on how to work with the enabled dApp connector.",
+  "connector.connectedWebsites.permissions.videoLink": "the video introduction",
+  "connector.connectedWebsites.permissions.enable": "enable",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
   "global.connector.connectedWebsites": "Connected Websites",
   "global.connector.messageReadOnly": "We are granting read-only to view utxos/addresses.",
